Fixed various scrollbars

--- a/style.css
+++ b/style.css
@@ -283,8 +283,6 @@ input{
 .formLine{
     display: table;
     width: 100%;
-    vertical-align: center;
-
 }
 
 .formLine input, .formLine label {
@@ -587,6 +585,14 @@ input{
 
 /* Track */
 ::-webkit-scrollbar-track {
+    background: #EBEAD4;
+}
+
+.tableContainer::-webkit-scrollbar-track {
+    background: #FFFEE6;
+}
+
+.uploadsTagList::-webkit-scrollbar-track {
     background: #000000;
 }
 
@@ -608,9 +614,7 @@ input{
 }
 
 .lbrTable{
-    border: 1px solid #EA001C;
     width: 100%;
-    max-height: 50em;
     border-collapse: collapse;
 }
 
@@ -622,10 +626,11 @@ input{
 
 .lbrTable td{
     padding-left: 1em;
+    font-size: 2.25em;
 }
 
 .lbrTable input{
-    font-size: 1.25em ;
+    font-size: 0.7em ;
     width: auto;
 }
 
@@ -635,4 +640,11 @@ input{
 
 .lbrTable tr:nth-child(2n+1) {
     background-color: #EBEAD4;
+}
+
+.tableContainer{
+    border: 1px solid #EA001C;
+    width: 100%;
+    height: 350px;
+    overflow: auto;
 }
